--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -16,6 +16,7 @@
     "redux": "^4.0.4",
     "redux-axios-middleware": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.87.3",
     "styled-components": "^4.3.2"
@@ -26,9 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages-deploy",
-    "clean-source": "rimraf README.md src webroot package.json"
+    "clean-source": "rimraf README.md src webroot package.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
